[package]
name = "twilight-line-v2-rust"
description = "another tunnel proxy"
authors = ["kaien <kaienkira@gmail.com>"]
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
aes = { version = "0.9.0" }
bytes = { version = "1.11.1" }
cfb-mode = { version = "0.9.0" }
clap = { version = "4.6.1", features = ["derive"] }
rand = { version = "0.10.1" }
regex = { version = "1.12.3" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
sha2 = { version = "0.11.0" }
tokio = { version = "1.52.1", features = ["full"] }

[dev-dependencies]
hex = { version = "0.4.3" }

[lib]
name = "tl_common"
path = "src/common/lib.rs"

[[bin]]
name = "twilight-line-rust-client"
path = "src/client/main.rs"

[[bin]]
name = "twilight-line-rust-server"
path = "src/server/main.rs"
